= 0.1.4

* Join on both the id and type for polymorphic joins.

* Fix a bug where we were using the incorrect table names in joins and
ordering with joins.

* Change != to the SQL standard <>.

* Fix invalid SQL generated by not_all and not_any.

* Detect count/size/length queries and do the appropriate distinct clause for
those count queries.

* Do DISTINCT searches for queries that involve specific types of joins.

* Allow passing a join type as the first argument to having.

* Restructured the explicit join API

* Raise exceptions when doing an explicit join using columns that don't exist.

* Allow explicit joins on values: left_join(:class_name, :table_alias, :rcol
=> 'Post'...)

* Added a filter_class method to the DSL for getting the class that is being
filtered.

* Added custom join feature: left_join(:table_name, :table_alias, :rcol =>
:lcol...)

* Changed custom exceptions to subclass StandardError and not crash the entire
app when throwing one (thanks RailsEnvy).

= 0.1.3

* Fixed a bug in filter.rb when trying to chain to named_scopes or things that
are otherwise not named_filters.

* Made a named_filters accessor for getting the list of filters that apply to
a particular class.

* Added none_of and not_all_of conjunctions.

* Changed the between restriction to take either a range, a tuple, or two
values.

* Support multiple joins in one having statement through having(:posts =>
:comments)

* Added a CHANGELOG

= 0.1.2

* Add LIKE and NOT LIKE restrictions

* Replace active record objects with their ids if passed as the value for a
resriction.

= 0.1.1

* Add group_by

* Raise informative exceptions when columns or associations are not found for
a given filter

* Alias is_null restriction to nil and null

* Alias comparison restrictions to gt, lt, lte, gte

* Add greater_than_or_equal_to and less_than_or_equal_to restrictions.