@@ -23,11 +23,18 @@ module RecordFilter
           if association.nil?
             raise AssociationNotFoundException.new("The association #{association_name} was not found on #{@model_class.name}.")
           end
-          case association.macro
-          when :belongs_to, :has_many, :has_one
-            simple_join(association, join_type)
-          when :has_and_belongs_to_many
-            compound_join(association, join_type)
+
+          if (association.options[:through])
+            through_association = @model_class.reflect_on_association(association.options[:through])
+            through_join = join_association(association.options[:through], join_type)
+            through_join.right_table.join_association(association_name, join_type)
+          else
+            case association.macro
+            when :belongs_to, :has_many, :has_one
+              simple_join(association, join_type)
+            when :has_and_belongs_to_many
+              compound_join(association, join_type)
+            end
           end
         end
     end
