@@ -1,5 +1,0 @@
-class Ad < ActiveRecord::Base
-  extend TestModel
-
-  belongs_to :blog
-end
