@@ -1,6 +1,0 @@
-class Blog < ActiveRecord::Base
-  extend TestModel
-
-  has_many :posts
-  has_many :ads
-end
