@@ -1,5 +1,0 @@
-class Comment < ActiveRecord::Base
-  extend TestModel
-
-  belongs_to :post
-end
