@@ -1,3 +1,0 @@
-class Photo < ActiveRecord::Base
-  belongs_to :post
-end
